# diesel-reproducible-example

./: Cargo.toml  query.sql
migrations/2024-03-06-123021_create_table/: down.sql  up.sql
src/: main.rs
